# Spectral_Renderer

./: CMakeLists.txt  README.md
src/: ObjModel.h  aabb.h  aarect.h  box.h  bvh.h  camera.h  color.h  d65.h  filename.h  hittable.h  hittable_list.h  loadObj.h  main.cpp  material.h  moving_sphere.h  onb.h  pdf.h  ray.h  spectrum.h  spectrum_Data.h  sphere.h  test.cpp  texture.h  triangle.h  util.h  vec3.h  world.h
